Fixed image position and used flex to align image with trending users.

--- a/style.css
+++ b/style.css
@@ -213,4 +213,11 @@
     padding: 20px;
     background-color: white;
     border-bottom: 1px solid #d2d2d2;
+    display: flex;
+    flex-direction: row;
+}
+
+.card-left-image {
+    width: 45px;
+    height: auto;
 }
